# pico-badapple-rs

./: .embed.toml  Cargo.toml  README.md
.cargo/: config
src/: main.rs
