[package]
name = "bad-apple"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-time = "0.12.1"
fugit = "0.3.7"
mipidsi = "0.8.0"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rp-pico = "0.9.0"
